# nerm

./: LICENSE.md  Nermfile  Nermfile.toml  README.md  pyproject.toml
docs/: Nermfile.md
nerm/: crossrefs.py  discovery.py  gitrefs.py  nerm.py  nermfile.py  reqfile.py  satisfy.py  update.py
requirements/: nerm.md
tests/: test_crossrefs.py  test_nerm.py  test_reqfile.py  test_satisfy.py  test_update.py
tests/data/: Nermfile  Nermfile.toml  otherdoc.md  test.md
